GP Additive Drawing mode doesnt work with shapes #59483

Closed
opened 2018-12-17 10:14:23 +01:00 by Konstantin · 4 comments

System Information
Operating system: Windows 8.1
Graphics card: 'AMD Radeon HD 7480D'

Blender Version
Broken:
version: 2.80 (sub 37), branch: blender2.8, commit date: 2018-12-16 23:25, hash: 9149e89421, build date: 16/12/2018, 17:56
previous versions (before recent GP shapes update) were broken too.

Short description of error

GP shapes is not affected by "Use Additive Drawing" setting.

gp_prim_additive_draw.png

Exact steps for others to reproduce the error
1- in Grease pencil object Drawing mode turn on "Use Additive Drawing" mode.
2- Create any shape.
3- Change frame on timeline.
4- Create shape again.
previous drawing will disapear as if "Use Additive Drawing" mode were off.

**System Information** Operating system: Windows 8.1 Graphics card: 'AMD Radeon HD 7480D' **Blender Version** Broken: version: 2.80 (sub 37), branch: blender2.8, commit date: 2018-12-16 23:25, hash: 9149e894210, build date: 16/12/2018, 17:56 previous versions (before recent GP shapes update) were broken too. **Short description of error** GP shapes is not affected by "Use Additive Drawing" setting. ![gp_prim_additive_draw.png](https://archive.blender.org/developer/F5978820/gp_prim_additive_draw.png) **Exact steps for others to reproduce the error** 1- in Grease pencil object Drawing mode turn on "Use Additive Drawing" mode. 2- Create any shape. 3- Change frame on timeline. 4- Create shape again. previous drawing will disapear as if "Use Additive Drawing" mode were off.
Author

Added subscriber: @Ko

Added subscriber: @Ko
Antonio Vazquez self-assigned this 2018-12-17 11:23:19 +01:00

This issue was referenced by 7d36a2a775

This issue was referenced by 7d36a2a7753e89c86f40ffd7a1607c4888137171

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

BTW, you can enable additive drawing using the icon in the topbar:

image.png

BTW, you can enable additive drawing using the icon in the topbar: ![image.png](https://archive.blender.org/developer/F5979398/image.png)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59483
No description provided.