Fix T59483: Grease Pencil Additive Drawing mode doesn't work with shapes